Fixing layout problem by setting body to relative

--- a/src/client/sass/base/_base.scss
+++ b/src/client/sass/base/_base.scss
@@ -15,6 +15,7 @@ body {
     box-sizing: border-box;
     font-family: 'Lato', Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    position: relative;
 }
 
 
